# omniportal

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  flake.nix
.cargo/: config.toml
docs/: infinity-usb-target.md  usb-target.md
link/rp2350-pico2w/: memory.x
partitions/: esp32s3-n16r8.csv
scripts/: build-pico2w-firmware.sh  inspect-uf2.py  patch-esp-toolchain-nixos.sh  patch-rp2350-uf2-family.py  probe-infinity-base.py  probe-skylanders-portal.py  probe-usb-echo.py
src/: config.rs  dhcp.rs  lib.rs  main.rs  state.rs  wifi.rs
src/domain/: entity.rs  mod.rs  placement.rs
src/figures/: catalog.rs  formats.rs  init.rs  mod.rs  skylanders_crypto.rs
src/figures/infinity/: catalog.rs  image.rs  mod.rs
src/figures/skylanders/: catalog.rs  crypto.rs  image.rs  mod.rs
src/platform/: mod.rs
src/platform/esp32s3_n16r8/: board.rs  log.rs  mod.rs  storage_flash.rs  wifi.rs
src/platform/rp2350_pico2w/: board.rs  log.rs  mod.rs  storage_flash.rs
src/storage/: catalog.rs  forms.rs  journal.rs  json.rs  mod.rs  records.rs  tests.rs  wear.rs
src/usb/: device.rs  esp32s3.rs  infinity.rs  infinity_device.rs  mod.rs  skylanders.rs  skylanders_device.rs
src/web/: dispatch.rs  http.rs  mod.rs  routes.rs  server.rs  ui_html.rs
src/web/ui/: index.html
